vlib/v/parser/tests/prefix_dec_bare_err.out
vlib/v/parser/tests/prefix_dec_bare_err.vv:3:1: error: token `--` must be on the same line as the previous token
    1 | mut v := 4
    2 | _ = v
    3 | --
      | ~~